# whatabook-django

./: .isort.cfg  Procfile  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
core/: admin.py  models.py  paginations.py  serializers.py  views.py
core/admin/: __init__.py  autor.py  categoria.py  editora.py  listafav.py  livro.py  resenha.py  user.py
core/migrations/: 0001_initial.py  0002_alter_livro_capa_livro.py  0002_alter_livro_sinopse_livro.py  0002_alter_resenha_nota_resenha.py  0002_alter_resenha_user_lista.py  0002_alter_resenha_user_resenha.py  0002_alter_user_cpf.py  0002_alter_user_data_nasc_alter_user_endereco_user_and_more.py  0002_alter_user_foto_perfil.py  0002_remove_resenha_user_resenha_resenha_user_resenha.py  0002_remove_user_cpf_user_biografia_user_imagem_and_more.py  0002_rename_autor_livro_livro_autor_li.py  0002_rename_editora_livro_editora_livro.py  0002_rename_livro_resenha_resenha_livro_res.py  0003_alter_livro_capa_livro.py  0003_alter_livro_sinopse_livro.py  0003_alter_resenha_user_resenha.py  0003_alter_user_cpf.py  0003_alter_user_data_nasc.py  0003_alter_user_foto_perfil.py  0003_alter_user_options.py  0003_remove_user_imagem_midia.py  0003_rename_autor_li_livro_autor_livros.py  0003_rename_livro_res_resenha_livro_opniao.py  0004_alter_livro_capa_livro.py  0004_alter_user_telefone_user.py  0004_categoria_alter_livro_sinopse_livro.py  0004_livro_categoria_livro.py  0004_livro_medianota_alter_resenha_livro_resenha_and_more.py  0005_autor.py  0006_autor_autor_imagem.py  (+12 more)
whatabook/: asgi.py  settings.py  urls.py  wsgi.py
(+27 files in other folders)
